# aleo_minimum_anti_collusion_infrastructure

./: .dockerignore  .drone.yml  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  run.sh  shell.nix
circuits/sign-up/: Leo.toml  README.md
circuits/sign-up/inputs/: sign-up.state
circuits/sign-up/src/: main.leo
circuits/tally/: .gitignore  Leo.toml  README.md
circuits/tally/inputs/: tally.in  tally.state
circuits/tally/src/: cipher.leo  hash.leo  main.leo  merkle_tree.leo  mimc.leo  poseidon.leo
circuits/whitelist/: .gitignore  Leo.toml  README.md
circuits/whitelist/inputs/: whitelist.in
circuits/whitelist/src/: main.leo  merkle_tree.leo  poseidon.leo
client/: Cargo.toml  Dockerfile
client/data/: whitelist.json
client/src/: main.rs
client/src/leo/: io.rs  mod.rs
client/src/tally/: mod.rs  tally.rs
client/src/transactions/: mod.rs  transactions.rs
dashboard/: .dockerignore  .gitignore  Dockerfile  bsconfig.json  nginx.conf  package-lock.json  package.json
dashboard/public/: index.html
dashboard/src/: App.res  index.js
dashboard/src/components/: Home.res  Layout.res  PageNotFound.res
dashboard/src/components/home/: Home.res
dashboard/src/components/navbar/: Navbar.res
dashboard/src/components/results/: ResultBox.res  ResultCard.res  ResultGrid.res
dashboard/src/components/swr/: SwrError.res  SwrLoading.res
dashboard/src/components/transactions/: VoteTransactionCard.res  VoteTransactionGrid.res
dashboard/src/components/utils/: EmptyAlert.res
dashboard/src/components/whitelist/: WhitelistCard.res  WhitelistGrid.res
dashboard/src/models/: Results.res  Votes.res  VotesTxs.res  WhiteList.res
dashboard/src/styles/: main.css
dashboard/src/utils/: Endpoint.res  Endpoints.res  SwrFetch.res
docs/: README.md
libs/: Cargo.toml
libs/src/: lib.rs
libs/src/aleo_account/: account.rs  mod.rs
libs/src/crypto/: cipher.rs  mod.rs
libs/src/fr_helpers/: converter.rs  mod.rs
libs/src/merkle_tree/: merkle_tree.rs  mod.rs
libs/src/rcp/: mod.rs  rcp.rs
libs/src/transactions/: transactions.rs
server/: Cargo.toml  Dockerfile  dev.http
server/src/: main.rs
server/src/controllers/: election_controllers.rs  mod.rs  security.rs
server/src/filters/: election_filters.rs  mod.rs
server/src/models/: election.rs  message.rs  mod.rs  results.rs  tally.rs  votes.rs  whitelist.rs
server/src/services/: kvstore.rs  leo_input_generator.rs  leo_io.rs  mod.rs  tally.rs
server/src/utils/: election.rs  errors.rs  mod.rs
