[package]
name = "aleo-maci-cli"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rusty-hook = "^0.11.2"

[dependencies.uuid]
features = ["v4", "serde"]
version = "0.8"

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
ring = "0.16.20"
#Ring requires us to use this for some functions
untrusted = "0.9.0"
hex = "0.4.3"
rand = "0.8.5"
secrecy = "0.8.0"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }

[dependencies.snarkvm]
#path = "../snarkVM"
git = "https://github.com/AleoHQ/snarkVM" 
tag = "v0.8.0"
features = ["algorithms", "curves", "fields", "gadgets", "parameters", "parameters_no_std_out", "r1cs", "utilities"]

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.serde_json]
version = "1.0"

[dependencies.thiserror]
version = "1.0"

[dependencies.http-client]
version = "6.2"
features = ["native_client"]
default-features = false

[dependencies.surf]
version = "2.3"

[dependencies.futures]
version = "0.3"


