[package]
name = "aleo-maci-libs"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
rusty-hook = "^0.11.2"

[dependencies.uuid]
features = ["v4", "serde"]
version = "0.8"

[dependencies]
futures = "0.3.21"
clap = { version = "3.1.6", features = ["derive"] }
ring = "0.16.20"
#Ring requires us to use this for some functions
untrusted = "0.9.0"
hex = "0.4.3"
rand = "0.8.5"
secrecy = "0.8.0"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
poseidon-rs = { git = "https://github.com/hexLancel/poseidon-rs-bls-12-377" }
ff = {package="ff_ce" , version="0.11", features = ["derive"]}
num = "0.1.36"
bech32 = "0.9.0"

[dependencies.snarkvm]
#path = "../snarkVM"
git = "https://github.com/AleoHQ/snarkVM" 
tag = "v0.8.0"
features = ["algorithms", "curves", "fields", "gadgets", "parameters", "parameters_no_std_out", "r1cs", "utilities"]

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.serde_json]
version = "1.0"

[dependencies.thiserror]
version = "1.0"
