[package]
name = "aleo-maci-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
r2d2_redis = "0.14.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12.0"
chrono = { version = "0.4", features = ["serde"]}
uuid = { version = "0.8", features = ["serde", "v4"] }
pretty_env_logger = "0.4"
poseidon-rs = { git = "https://github.com/hexLancel/poseidon-rs-bls-12-377" }
ff = {package="ff_ce" , version="0.11", features = ["derive"]}
hex = "0.4"
num = "0.1.36"

[dependencies.aleo-maci-libs]
path = "../libs"

[dev-dependencies]
rusty-hook = "^0.11.2"
